fix overflow again (change scroll to auto)

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -25,4 +25,4 @@ pre, code
 	-o-tab-size: 4 !important
 	-webkit-tab-size: 4 !important
 pre code, pre, code
-	overflow-x: scroll !important
+	overflow-x: auto !important
